Add Project Readme

--- a/01_ND2_to_OME-ZARR.ipynb
+++ b/01_ND2_to_OME-ZARR.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Workflow Overview: ND2 to OME-Zarr, Colony & Nucleus Segmentation, Feature Extraction\n",
     "\n",
-    "The following set of notebook provides a reproducible workflow for high-content image analysis of stem cell experiments. The workflow is designed to process microscopy data from raw ND2 files to quantitative feature extraction, enabling downstream biological analysis. The main steps are:\n",
+    "The following set of notebook provides a reproducible workflow for high-content image analysis of timelpase live cell experiments. The workflow is designed to process microscopy data from raw ND2 files to quantitative feature extraction, enabling downstream biological analysis. The main steps are:\n",
     "\n",
     "1. **ND2 to OME-Zarr conversion**: Convert raw ND2 microscopy files to the OME-Zarr format for scalable, cloud-ready storage and analysis.\n",
     "2. **Colony segmentation using ConvPaint**: Identify and segment stem cell colonies in the images using a deep learning-based approach.\n",
