--- a/03_Nucleus_Segmentation.ipynb
+++ b/03_Nucleus_Segmentation.ipynb
@@ -4,19 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Workflow Overview: ND2 to OME-Zarr, Colony & Nucleus Segmentation, Feature Extraction\n",
     "\n",
-    "This notebook provides a reproducible workflow for high-content image analysis of stem cell experiments. The workflow is designed to process microscopy data from raw ND2 files to quantitative feature extraction, enabling downstream biological analysis. The main steps are:\n",
+    "The following set of notebook provides a reproducible workflow for high-content image analysis of timelpase live cell experiments. The workflow is designed to process microscopy data from raw ND2 files to quantitative feature extraction, enabling downstream biological analysis. The main steps are:\n",
     "\n",
-    "1. **ND2 to OME-Zarr conversion**: Convert raw ND2 microscopy files to the OME-Zarr format for scalable, cloud-ready storage and analysis. This step ensures compatibility with modern analysis tools and efficient data handling.\n",
-    "2. **Colony segmentation using ConvPaint**: Identify and segment stem cell colonies in the images using a deep learning-based approach (ConvPaint). This step isolates regions of interest for further single-cell analysis.\n",
-    "3. **Nucleus segmentation using StarDist**: Detect and segment individual nuclei within colonies for single-cell analysis. StarDist is a state-of-the-art tool for robust nucleus detection in microscopy images.\n",
-    "4. **Cell Tracking**: Track individual cells over time to study dynamic behaviors, such as migration, division, and lineage relationships.\n",
-    "5. **Feature Extraction**: Quantify spatial features and extract relevant biological markers (e.g., ERK, Oct4) for each cell, enabling downstream statistical and biological analysis.\n",
+    "1. **ND2 to OME-Zarr conversion**: Convert raw ND2 microscopy files to the OME-Zarr format for scalable, cloud-ready storage and analysis.\n",
+    "2. **Colony segmentation using ConvPaint**: Identify and segment stem cell colonies in the images using a deep learning-based approach.\n",
+    "3. **Nucleus segmentation using StarDist**: Detect and segment individual nuclei within colonies for single-cell analysis.\n",
+    "4. **Cell Tracking**: Track individual cells over time to study dynamic behaviors.\n",
+    "5. **Feature Extraction**: Quantify spatial features and extract relevant biological markers (e.g., ERK, Oct4) for each cell.\n",
     "\n",
-    "Configuration options such as the output path or scaling parameters can be easily adjusted in the `configuration/settings.py` file. To change the way the Dask cluster is started, modify the `configuration/dask.py` file.\n",
+    "Configuration options such as the output path or scaling parameters can be easily adjusted in the `configuration/settings.py` file. To change the way the dask cluster is started, modify the `configuration/dask.py` file. \n",
     "\n",
-    "The workflow is highly modular, making it straightforward to adapt to different datasets or analysis needs. Once the ND2 files have been converted to OME-Zarr, the subsequent steps can be performed independently, allowing you to skip or repeat steps as required for your analysis.\n"
+    "The workflow is highly modular, making it straightforward to adapt to different datasets or analysis needs. Once the ND2 files have been converted to OME-Zarr, the subsequent steps can be performed independently allowing you to skip or repeat steps as required for your analysis.\n"
    ]
   },
   {
