--- a/05_Feature_Extraction_ERK_Oct4.ipynb
+++ b/05_Feature_Extraction_ERK_Oct4.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "# Workflow Overview: ND2 to OME-Zarr, Colony & Nucleus Segmentation, Feature Extraction\n",
     "\n",
-    "This notebook implements a reproducible workflow for high-content image analysis of stem cell experiments. The workflow is designed to process microscopy data, segment colonies and nuclei, track cells, and extract biologically relevant features such as ERK and Oct4 intensities.\n",
+    "The following set of notebook provides a reproducible workflow for high-content image analysis of timelpase live cell experiments. The workflow is designed to process microscopy data from raw ND2 files to quantitative feature extraction, enabling downstream biological analysis. The main steps are:\n",
     "\n",
-    "### Main Steps:\n",
+    "1. **ND2 to OME-Zarr conversion**: Convert raw ND2 microscopy files to the OME-Zarr format for scalable, cloud-ready storage and analysis.\n",
+    "2. **Colony segmentation using ConvPaint**: Identify and segment stem cell colonies in the images using a deep learning-based approach.\n",
+    "3. **Nucleus segmentation using StarDist**: Detect and segment individual nuclei within colonies for single-cell analysis.\n",
+    "4. **Cell Tracking**: Track individual cells over time to study dynamic behaviors.\n",
+    "5. **Feature Extraction**: Quantify spatial features and extract relevant biological markers (e.g., ERK, Oct4) for each cell.\n",
     "\n",
-    "1. **ND2 to OME-Zarr conversion**: Converts raw ND2 microscopy files to the OME-Zarr format for scalable, cloud-friendly storage and analysis.\n",
-    "2. **Colony segmentation using ConvPaint**: Identifies and segments colonies in the images using a convolutional neural network.\n",
-    "3. **Nucleus segmentation using StarDist**: Detects and segments individual nuclei using the StarDist algorithm.\n",
-    "4. **Cell Tracking**: Links nuclei across timepoints to track individual cells throughout the experiment.\n",
-    "5. **Distance to colony edge & extraction of ERK/Oct4 features**: Calculates the distance of each nucleus to the colony edge and extracts quantitative features such as ERK and Oct4 intensities for downstream analysis.\n",
+    "Configuration options such as the output path or scaling parameters can be easily adjusted in the `configuration/settings.py` file. To change the way the dask cluster is started, modify the `configuration/dask.py` file. \n",
     "\n",
-    "The following sections provide code and explanations for each step, focusing on feature extraction from segmented and tracked data.\n"
+    "The workflow is highly modular, making it straightforward to adapt to different datasets or analysis needs. Once the ND2 files have been converted to OME-Zarr, the subsequent steps can be performed independently allowing you to skip or repeat steps as required for your analysis."
    ]
   },
   {
